			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04m: *********************************

BUG: (5/16/06, DN) Exception in VectorDrawing (Bug #1002).
FIX: In VectorCache invalidate cache in EThread.

BUG: (5/16/06, DN) IRSIM command launches createWindow in EThread.
FIX: Runs Analyzer.startIrsim in GUI thread instead of Job.

BUG: (5/16/06, DN) Regression failed because of duplicate temporary name.
FIX: In NodeInst.newInstance(Cell,ImmutableNodeInst) update d.name on duplicate names.

BUG: (5/15/06, GVG) DELIB files can't be open with OpenDialog on Mac (#996)
FIX: Temporary fix: using Swing dialog even for MacOSX.

BUG: (5/13/06, DN) GDS import fails to complete (Bug #987).
     Database has slow NodeInst sorting, because it tries to save memory.
FIX: Sort NodeIns in GDS reader before supplying to database.

BUG: (5/13/06, DN) Bad behaviour with empty export name and temporary export name (Bug #993, Bug #1003).
FIX: Make valid export name a database invariant. ExportIds are taken as is, ExportNames are repaired in Export.newInstance.

BUG: (5/12/06, GVG) Shorten selected arc causes Exception (see log shorten-selected electric) (Bug #1001).
FIX: cell not setup in ShortenArcs job.

BUG/MAN: (5/12/06, GVG) Problems with text size <1 (Bug #986).
FIX: Consistent setting of min and max values in TexInfoPanel.java by adding Size.TXTMINPOINTS and Size.TXTMINQGRID.

IMP/MAN: (5/12/06, DN) In EidtKeyBindings dialog edit hidden submenu as "Shortcuts" submenu.

BUG: (5/12/06, DN) Exception when define accelerator for submenu.
FIX: In EditKeyBindings forbid editing accelerators of separators and submenus.

BUG: (5/12/06, DN) Russian manual is not properly displayed.
FIX: In ManualViewer.loadPage add explicitly name of encoding: "UTF-8".

IMP/MAN: (5/11/06, GVG) NT-N-transistor in TSMC180

BUG: NCC. Insert print statements to help debug Bugzilla# 969, 977
